# testflutterbridge

./: README.md  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/testflutterbridge/: MainActivity.kt
integration_test/: simple_test.dart
lib/: main.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: simple.dart
rust/: Cargo.toml
rust/src/: frb_generated.io.rs  frb_generated.rs  frb_generated.web.rs
rust/src/api/: simple.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_testflutterbridge.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_testflutterbridge.podspec
rust_builder/windows/: CMakeLists.txt
