[package]
name = "rust_lib_testflutterbridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.0.0-dev.34"
snips-nlu-lib = { git = "https://github.com/snipsco/snips-nlu-rs", branch = "master" }
serde = "1.0"
serde_json = "1.0"

[patch."https://github.com/snipsco/gazetteer-entity-parser"]
gazetteer-entity-parser = { git = "https://github.com/Xoroxa/gazetteer-entity-parser", branch = "fix" }

[patch."https://github.com/snipsco/crfsuite-rs"]
crfsuite = { git = "https://github.com/Xoroxa/crfsuite-rs", branch = "fix" }
